k8s/makemkv/resources/makemkv.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      securityContext:
        fsGroup: 1000
      nodeSelector:
        optical-drives: 'true'
      containers:
        - image: jlesage/makemkv:v25.10.1@sha256:17787b7caa17f6fefa80597c3a8f038d7701aac4324e5559d70570b3b4e69a9b
          name: makemkv
          securityContext:
            privileged: true
          ports:
            - name: web
              containerPort: 5800
          volumeMounts:
            - name: media
              mountPath: /output
              subPath: Downloads
            - name: sr0
              mountPath: /dev/sr0
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: nfs-media
        - name: sr0
          hostPath:
            path: /dev/sr0

---
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: web
      port: 80
      targetPort: web
