k8s/makemkv/resources/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    gethomepage.dev/href: 'https://makemkv.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: makemkv
    gethomepage.dev/group: Servarr
    gethomepage.dev/icon: makemkv
    gethomepage.dev/name: MakeMKV
    gethomepage.dev/weight: '10'
    cert-manager.io/cluster-issuer: cloudflare-issuer
    nginx.ingress.kubernetes.io/auth-method: GET
    nginx.ingress.kubernetes.io/auth-url: http://authelia-service.default.svc.cluster.local/api/authz/auth-request
    nginx.ingress.kubernetes.io/auth-signin: https://auth.durbin.casa?rm=$request_method
    nginx.ingress.kubernetes.io/auth-response-headers: Remote-User,Remote-Name,Remote-Groups,Remote-Email
spec:
  ingressClassName: internal
  rules:
    - host: &host makemkv.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: web
  tls:
    - secretName: durbin-casa-wildcard-cert
      hosts:
        - *host
